# LFM-IVR

./: README.md
ESP_cam/: ESP_cam.ino
MLA-R/: CMakeLists.txt  mla_r.cpp
MLGI/: CMakeLists.txt  mlgi_gui.cpp  mlgi_gui.h  mlgi_include.cpp  mlgi_include.h  mlgi_main.cpp  mlgi_network.cpp  mlgi_network.h
MLRI/: CMakeLists.txt  mlri_gui.cpp  mlri_gui.h  mlri_include.cpp  mlri_include.h  mlri_main.cpp  stb_image.h
